# hyperconnections

./: .gitignore  README.md  ncu_profile.sh  ncu_profile_proj.sh  pyproject.toml  requirements.txt
benchmarks/: expm_bench.py  stream_mix_bench.py
experiments/: cifar.py  cifar_plotting.py  eigval_analysis.py  tiny_stories.py
hyperconnections/: __init__.py  attnhc.py  cghc.py  cghc_fdyn.py  cghc_strang.py  ghc.py  kghc.py  mhc.py
hyperconnections/ops/: __init__.py  expm.py  expm_triton.py  numbers.py  stream_mix.py  stream_mix_big_nb.py  stream_mix_small_nb.py
tests/: conftest.py  test_ghc.py  test_ops.py
