[project]
name = "hyperconnections"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "torch",
    "einops",
    "timm",
    "treescope"
]

[project.optional-dependencies]
experiments = [
    "datasets",
    "transformers",
    "omegaconf",
    "trackio",
    "matplotlib",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
]
